Refactor Guide and Notification services with event-based updates
Updated `GuideService` and `NotificationService` to support event publishing and handling for guide creation and updates. Added new `GuideCreatedEvent` and `GuideUpdatedEvent` classes. Introduced `GuideMapper` for consistent mapping of guide entities to responses. Simplified `GuideController` for cleaner request handling. Enabled authenticated access for notifications in `SecurityConfig`. Updated application properties to use Hibernate `update` mode.